# stm32l432kcu6

./: .mxproject  CMakeLists.txt  README.md  basic.ioc  stm32l432kcux_flash.ld
cmake/stm32cubemx/: CMakeLists.txt
scripts/: connect.sh  debug_server.sh  flash.sh
src/app/: main.c
src/app/src/: main.c
